# sidedns

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  daemon.rs  lib.rs  main.rs  run.rs
cli/src/commands/: add.rs  cert.rs  clean.rs  daemon.rs  list.rs  mod.rs  remove.rs  resolve.rs  run.rs  status.rs  watch.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  logging.rs  rule.rs  runner.rs  state.rs  store.rs
core/src/certs/: ca.rs  mod.rs
core/src/certs/trust/: java.rs  mod.rs  nss.rs  system.rs
core/src/dns/: mod.rs  resolver.rs  server.rs
core/src/dns/sys/: macos.rs  mod.rs  noop.rs  systemd.rs  windows.rs
core/src/ipc/: client.rs  handler.rs  message.rs  mod.rs  server.rs
core/src/proxy/: mod.rs  server.rs
core/tests/: domain_test.rs  ipc_test.rs  rule_test.rs  store_test.rs
