[package]
name = "sidedns-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
name = "sidedns_cli"
path = "src/lib.rs"

[dependencies]
sidedns-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
daemon-kit.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-util.workspace = true
dirs.workspace = true
listeners.workspace = true
tracing.workspace = true
inquire.workspace = true
