[package]
name = "sidedns-cli"
version = "0.1.1"
publish = true
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true

[[bin]]
name = "sidedns"
path = "src/main.rs"

[dependencies]
sidedns-core = { version = "=0.1.1", path = "../core" }
anyhow.workspace = true
clap.workspace = true
daemon-kit.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-util.workspace = true
dirs.workspace = true
listeners.workspace = true
tracing.workspace = true
inquire.workspace = true
is_superuser.workspace = true
